--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.4.1",
+    "bloc-builder-react": "^1.0.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-paper": "^3.10.1",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
