--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-native": "0.62.2",
     "react-native-paper": "^3.10.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "rxjs": "^6.5.5"
   },
   "devDependencies": {
