--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.4.1",
-    "bloc-builder-react": "^1.0.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-paper": "^3.10.1",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "rxjs": "^6.5.5"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
     "@babel/runtime": "7.10.2",
     "@react-native-community/eslint-config": "0.0.5",
+    "@testing-library/react-native": "^5.0.3",
     "babel-jest": "^24.9.0",
     "eslint": "6.8.0",
     "jest": "^24.9.0",
+    "jest-sonar-reporter": "^2.0.0",
     "metro-react-native-babel-preset": "0.58.0",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "sonarqube-scanner": "^2.6.0"
   },
   "jest": {
     "preset": "react-native"
