--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-paper": "^3.10.1",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
