--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "^2.4.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-grid-list": "^1.1.0",
     "react-native-paper": "^3.10.1",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
